# crewai

./: main.py  math.csv  pyproject.toml  review.csv
crewai_sequential/: README.md  pyproject.toml
crewai_sequential/latest_ai_development/: pyproject.toml
crewai_sequential/src/crewai_sequential/: crew.py  main.py
crewai_sequential/src/crewai_sequential/config/: agents.yaml  tasks.yaml
crewai_sequential/test_llm/: README.md  pyproject.toml  report.md
crewai_sequential/test_llm/src/test_llm/: crew.py
n8n/: docker-compose.yml
n8n/n8n_data/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
ollama/: ollama_run.py
