[project]
name = "crewai_sequential"
version = "0.1.0"
description = "crewai_sequential using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
crewai_sequential = "crewai_sequential.main:run"
run_crew = "crewai_sequential.main:run"
train = "crewai_sequential.main:train"
replay = "crewai_sequential.main:replay"
test = "crewai_sequential.main:test"
run_with_trigger = "crewai_sequential.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
