[project]
name = "test_llm"
version = "0.1.0"
description = "test_llm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
test_llm = "test_llm.main:run"
run_crew = "test_llm.main:run"
train = "test_llm.main:train"
replay = "test_llm.main:replay"
test = "test_llm.main:test"
run_with_trigger = "test_llm.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
